# human_aware_navigation

dynamic_social_costmap/include/dynamic_social_costmap/: dynamic_social_layers.h
human_aware_nav_launch/config/: global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
human_aware_nav_launch/launch/: move_base.launch  sim_world.launch
people_tf/: CMakeLists.txt  package.xml
people_tf/src/: tf_to_person.cpp
